# PUBG_RangeFinder

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: beta.yml  build.yml
src/app/: AppController.cpp  AppController.h  StaticQtPlugins.cpp  main.cpp
src/config/: UiSettingsDraft.h
src/overlay/: OverlayWindow.cpp  OverlayWindow.h
src/platform/win/: GlobalHotkeyManager.cpp  GlobalHotkeyManager.h  TrayController.cpp  TrayController.h
src/ui/: KeyCaptureLineEdit.cpp  KeyCaptureLineEdit.h  MainWindow.cpp  MainWindow.h
